[package]
name = "share"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
stylist = "0.10.1"
gloo-file = "0.2.3"
base64 = "0.13.0"
js-sys ="0.3"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.59"
features = ["File", "DragEvent", "DataTransfer"]


